<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/hlRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsextra"
        style="@style/tv_register"
        android:textColor="@color/tv_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        style="@style/username_regis"
        android:background="@drawable/input_shape"
        android:hint="@string/name_register_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvUsernameError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="gone"
        android:text="Username error"
        android:fontFamily="@font/poppinsregular"
        style="@style/errorMessage"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        style="@style/email"
        android:background="@drawable/input_shape"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="gone"
        android:text="Email error"
        android:fontFamily="@font/poppinsregular"
        style="@style/errorMessage"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        style="@style/password"
        android:background="@drawable/input_shape"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivTogglePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:src="@drawable/baseline_visibility_off_24"
        android:contentDescription="Toggle Password Visibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etPassword"
        app:layout_constraintBottom_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="gone"
        android:text="Password error"
        android:fontFamily="@font/poppinsregular"
        style="@style/errorMessage"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        style="@style/confirm_password"
        android:background="@drawable/input_shape"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivTogglePassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:contentDescription="Toggle Password Visibility"
        android:src="@drawable/baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="@+id/etConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.858" />

    <TextView
        android:id="@+id/tvConfirmPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="gone"
        android:text="Confirm Password error"
        android:fontFamily="@font/poppinsregular"
        style="@style/errorMessage"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/button_name_Register_value"
        android:textSize="18dp"
        android:fontFamily="@font/poppinsmedium"
        android:layout_marginTop="30dp"
        android:textColor="@color/button_text_color"
        android:background="@drawable/border_log_reg"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tvlogin_in_register"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/tv_login1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.380"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegister" />

    <TextView
        android:id="@+id/tvLogin2"
        style="@style/tvlogin2_in_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/tv_login2"
        android:textColor="@color/goto_color"
        app:layout_constraintStart_toEndOf="@id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>